assets/scss/termo-status.scss
.thermo-status {
	margin-top: 20px;
	text-align: center;
}

.thermo-status--house-icon {
	font-size: 22rem;
	font-weight: 100;
}

.thermo-status--icon {
	position: absolute;
	left: 90px;
	top: 30px;
	font-size: 4.5rem;
}

.thermo-status--value {
	font-size: 3rem;
	font-weight: bold;

	i {
		font-size: 3rem;
	}
}

.thermo-status--inside {
	position: relative;
	display: inline-block;

	.thermo-status--value {
		position: absolute;
		left: 61px;
	}

	.thermo-status--temp {
		top: 100px;
		color: $red;
	}

	.thermo-status--humi {
		color: $teal;
		top: 170px;
	}
}

.thermo-status--outside {
	display: inline-block;

	i {
		font-size: 3rem;
	}

	.thermo-status--temp {
		color: $maroon;
	}

	.thermo-status--humi {
		color: $navy;
	}

	.thermo-status--weather {
		margin-bottom: 40px;
		text-align: center;

		i {
			font-size: 3em;
		}
	}
}

.thermo-room-temps {
	font-size: 3rem;
}

